--- a/WebTest/WebTest.csproj
+++ b/WebTest/WebTest.csproj
@@ -15,8 +15,11 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.5.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.0" />
+    <PackageReference Include="Selenium.Mozilla.Firefox.Webdriver" Version="0.6.0.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.16.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="120.0.6099.7100" />
+    <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.33.0" />
   </ItemGroup>
 
 </Project>
